# SwarmEnterprise-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  =0.2.0  ALL_ERRORS_FIXED.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  FINAL_100_PERCENT_COMPLETION.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_READY.md  MERGE_REPORT.md  Makefile  QUICK_REFERENCE.md  README.md  SConstruct  SECURITY.md  START_HERE.md  TODO_REPORT.md  WINDOWS_TO_UBUNTU_COMPLETE_GUIDE.md  WINDOWS_UBUNTU_LAUNCH_GUIDE.md  alembic.ini  bundle-size-baseline.json  bundle-size-report.json  coverage.json  docker-compose.analytics.yml  docker-compose.local-laptop-ollama.yml  docker-compose.prod.yml  docker-compose.production-realms2riches.yml  docker-compose.production-self-hosted.yml  docker-compose.wsl-docker.yml  docker-compose.yml  docker-entrypoint.sh  (+21 more)
.github/: SECRETS.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: build-backend.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  merge-report.yml  performance.yml  pr-labels.yml  release.yml  security-scan.yml  stale.yml
.husky/: post-merge
agents/: asset_manager.py  llm_config.py
agents/code_review/: README.md  __init__.py  code_reviewer.py  security_auditor.py  style_checker.py
agents/devops/: README.md  __init__.py  ci_cd_manager.py  deployment_agent.py  infrastructure_agent.py  performance_monitor.py  security_scanner.py
agents/documentation/: README.md  __init__.py  api_doc_updater.py  changelog_generator.py  doc_generator.py
agents/managers/: board.py  commander.py
agents/marketing/: content_creator.py  lead_discovery.py
agents/ops/: __init__.py  monitor.py  scheduler.py  self_heal.py
agents/outreach/: crm_sync_agent.py  email_engine.py  enrichment_agent.py  reply_handler_agent.py  reporting_agent.py  sequencer_agent.py  tasks.py  worker.py
agents/self_healing/: __init__.py  auto_recovery.py  circuit_breaker.py  health_monitor.py
agents/ticketing/: __init__.py  backlog_manager.py  linear_integration.py  ticket_prioritizer.py
agents/tools/: file_system.py  web_search.py
agents/workers/: executor_critic.py
alembic/: env.py
alembic/versions/: .gitkeep  0001_initial_schema.py  0002_phase2_schema.py  0003_outreach_pipeline_models.py
assets/: ASSETS_README.md  registry.json
assets/prompts/: AI Studio vibe-coder.txt  Agent CLI Prompt 2025-08-07.txt  Agent Prompt 2.0.txt  Agent Prompt 2025-09-03.txt  Agent Prompt v1.0.txt  Agent Prompt v1.2.txt  Agent Prompt.txt  Agent loop.txt  Builder Prompt.txt  Chat Prompt.txt  Claude Code 2.0.txt  Craft Prompt.txt  DeepWiki Prompt.txt  Default Prompt.txt  DocumentAction.txt  Enterprise Prompt.txt  ExplainAction.txt  (+42 more)
backend/: Dockerfile  alerting.py  auth.py  celery_app.py  config.py  docker-entrypoint.sh  main.py  metrics.py  queue.py  rag.py  replicator.py  requirements.txt  secrets_helper.py  telemetry.py
deploy/: Caddyfile  Caddyfile.lb  Caddyfile.self-hosted  firewall_rules.sh  ssh_hardening.conf
docs/: AUTOMATED_LAUNCH_GUIDE.md  CODE_AUDIT_REPORT.md  COMPLETE_AUDIT_REPORT.md  FINAL_AUDIT_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LAUNCH.md  LAUNCH_CHECKLIST.md  LAUNCH_QUICK_START.md  LAUNCH_RUNBOOK.md  PRE_LAUNCH_CHECKLIST.md  SECRETS.md  SECURITY.md  api.md  architecture.md  deployment.md  launch-execution-plan.md  launch_readiness.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
monitoring/: alertmanager.yml  loki-config.yml  nginx.conf  prometheus.yml  promtail-config.yml
scripts/: _paths.py  asset_ingestion.py  backup_config.sh  backup_postgres.sh  bundle-size-check.js  check_and_fix_errors.py  check_docker.py  clean_artifacts.py  cleanup_and_organize.py  create_stripe_product.py  create_stripe_products.py  create_stripe_webhook.py  fix_all_errors.py  fix_json.py  fix_windows_compat.py  generate_core.py  generate_launch_report.py  generate_phase2.py  generate_phase3.py  generate_phase4.py  generate_secrets.py  harvest-todos.js  launch_services.py  maintenance.py  merge-quality.js  merge-report.js  notify.py  pip_audit_gate.py  pre_launch.py  prod_runbook.md  purge_secrets_instructions.md  restore_postgres.sh  run_alembic.py  run_health_check.py  run_migrations.sh  run_sovereign_loop.py  scale_check.sh  scan_env.ps1  security_audit.sh  seed.py  (+15 more)
tests/: conftest.py  test_api_companies.py  test_api_deployments.py  test_api_webhooks.py  test_api_ws.py  test_auth_api.py  test_billing_api.py  test_celery_tasks.py  test_code_packager.py  test_commander.py  test_companies_api.py  test_company_generator.py  test_company_generator_extended.py  test_coverage_gaps.py  test_coverage_phase2.py  test_deployment_service.py  test_deployment_service_extended.py  test_deployment_service_full.py  test_deployments_api.py  test_discovery.py  test_health_and_middleware.py  test_jwt_handler.py  test_launch_readiness.py  test_linear_engine.py  test_linear_engine_extended.py  test_live_factory.py  test_live_marketing.py  test_main_coverage.py  test_main_extended.py  test_middleware.py  test_new_modules.py  test_ollama_client.py  test_ollama_client_extended.py  test_queue_extended.py  test_services_extended.py  test_smoke_complete.py  test_storage_and_provisioner.py  test_template_engine.py  test_tenants_core.py  test_tenants_extended.py  (+6 more)
tests_sovereign/: test_api.py  test_db_integration.py  test_factory_orchestration.py  test_infrastructure_e2e.py  test_workflow_service.py
(+458 files in other folders)
