[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmOS"
version = "2.0.0"
description = "Autonomous Self-Replicating Digital Factory"
requires-python = ">=3.11"
authors = [{name = "Realms2Riches", email = "dev@realms2riches.com"}]
readme = "README.md"
license = {text = "FOSS"}

dependencies = [
    # Core Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # LLM & AI
    "crewai==0.25.0",
    "langchain==0.3.0.dev1",
    "langchain-community==0.3.27",
    "langchain-openai==1.1.14",
    "ollama==0.6.2",
    
    # Database
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    
    # Vector DB
    "chromadb==0.4.17",
    
    # Utilities
    "python-dotenv==1.2.2",
    "requests==2.33.0",
    "stripe==6.7.0",
    
    # Async
    "httpx==0.25.0",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==26.3.1",
    "ruff==0.1.7",
    "mypy==1.7.0",
]

frontend = [
    "nodejs>=18.0.0",
]

[tool.setuptools]
packages = ["agents", "backend"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"