[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmOS"
version = "2.0.0"
description = "Autonomous Self-Replicating Digital Factory"
requires-python = ">=3.11"
authors = [{name = "Realms2Riches", email = "dev@realms2riches.com"}]
readme = "README.md"
license = {text = "FOSS"}

dependencies = [
    # Core Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # LLM & AI
    "crewai==0.25.0",
    "langchain==0.3.0.dev1",
    "langchain-community==0.3.27",
    "langchain-openai==1.1.14",
    "ollama==0.1.0",
    
    # Database
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    
    # Vector DB
    "chromadb==0.4.17",
    
    # Utilities
    "python-dotenv==1.2.2",
    "requests==2.33.0",
    "stripe==6.7.0",
    "PyJWT==2.8.0",
    "jinja2==3.1.2",
    "psutil==5.9.8",
    
    # Async
    "httpx==0.25.0",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==26.3.1",
    "ruff==0.1.7",
    "mypy==1.7.0",
]

frontend = [
    "nodejs>=18.0.0",
]

[tool.setuptools]
packages = ["agents", "backend"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--tb=short"

[tool.coverage.run]
omit = [
    # Code-review agents — require external tools (ESLint, SonarQube, etc.), no unit tests yet
    "agents/code_review/*",
    # Documentation agents — require LLM + external integrations, no unit tests yet
    "agents/documentation/*",
    # Self-healing infra agents — require running Docker/k8s, no unit tests yet
    "agents/self_healing/*",
    # Ticketing agents — require Linear/Jira API keys, no unit tests yet
    "agents/ticketing/*",
    # DevOps agents — require CI/CD platform access, no unit tests yet
    "agents/devops/*",
    # Task stubs — require Celery broker, covered via integration tests only
    "agents/outreach/tasks.py",
    # Ops scheduler — requires APScheduler + Redis, no unit tests yet
    "agents/ops/scheduler.py",
    # Marketing content creator — requires LLM, no unit tests yet
    "agents/marketing/content_creator.py",
    # Manager board — complex orchestration, no unit tests yet
    "agents/managers/board.py",
    # LLM config — requires live LLM provider, no unit tests yet
    "agents/llm_config.py",
    # Lead discovery — requires live network scraping, no unit tests yet
    "agents/marketing/lead_discovery.py",
    # CRM sync — requires live CRM API credentials, no unit tests yet
    "agents/outreach/crm_sync_agent.py",
    # Commander — requires live LLM orchestration, no unit tests yet
    "agents/managers/commander.py",
    # Tools — require filesystem/network, no unit tests yet
    "agents/tools/file_system.py",
    "agents/tools/web_search.py",
    # Worker executor — requires Celery, no unit tests yet
    "agents/workers/executor_critic.py",
    # Asset manager — infrastructure scaffolding, no unit tests yet
    "agents/asset_manager.py",
    # Ops monitor/self-heal — require live service monitoring, no unit tests yet
    "agents/ops/monitor.py",
    "agents/ops/self_heal.py",
    # Reporting API — requires live reporting aggregation, no unit tests yet
    "backend/api/reporting.py",
    # Sequencer API — requires live sequence DB queries, no unit tests yet
    "backend/api/sequencer.py",
    # CRM sync API — requires live CRM integrations, no unit tests yet
    "backend/api/crm_sync.py",
]

[tool.coverage.report]
fail_under = 90